cafe/cafe-new-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cafe-ingress
spec:
  rules:
  - host: cafe.ako.rtbsystems.com
    http:
      paths:
      - pathType: Prefix
        path: "/tea"
        backend:
          service:
            name: tea-svc
            port: 
              number: 80
      - pathType: Prefix
        path: "/coffee"
        backend:
          service:
            name: coffee-svc
            port:
              number: 80
